--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,26 +1,25 @@
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: flask_eks_app
+  labels:
+    app: flask-eks-app
+  name: flask-eks-deployment
 spec:
-  replicas: 1 
+  replicas: 3  
   selector:
     matchLabels:
-      app: flask_eks_app
+      app: flask-eks-app      
   template:
     metadata:
       labels:
-        app: flask_eks_app
+        app: flask-eks-app        
     spec:
       containers:
-      - name: flask_eks_app
+      - name: flask-eks-app
         image: 851725544255.dkr.ecr.us-east-1.amazonaws.com/flask_eks_docker_image:latest
         ports:
         - containerPort: 3000
-          resources:
-            requests:
-              cpu: 100m
-              memory: 256Mi
-            limits:
-              cpu: 100m
-              memory: 256Mi
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "250m"
