--- a/service.yaml
+++ b/service.yaml
@@ -1,30 +1,3 @@
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: flask-app
-# spec:
-#   type: LoadBalancer
-#   ports:
-#   - port: 80
-#     targetPort: 5000
-#   selector:
-#     app: flask-app
-
-# flask-app-service.yaml
-
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: flask-eks-app-lb-service
-# spec:
-#   selector:
-#     app: flask-eks-app
-#   ports:
-#     - protocol: TCP
-#       port: 80
-#       targetPort: 3000
-  # type: LoadBalancer
-  
 apiVersion: v1
 kind: Service
 metadata:
@@ -36,16 +9,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 3000
-
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: flask-api-backend-service
-# spec:
-#   type: NodePort
-#   selector:
-#     app: web
-#   ports:
-#     - nodePort: 31479
-#       port: 8080
-#       targetPort: 5000
+  type: LoadBalacer
